chore: initial project import

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,14 @@ out
 .DS_Store
 # build outputs
 /dist/
+
+# additional ignores
+.esbuild/
+coverage/
+.vscode/
+*.tsbuildinfo
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.history/
