--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sidenoteai",
   "displayName": "SideNoteAI",
-  "publisher": "nekoyajin",
+  "publisher": "nekoya",
   "description": "A sidebar AI-powered memo extension for VS Code",
   "version": "0.0.7",
   "engines": {
