--- a/package.json
+++ b/package.json
@@ -109,7 +109,12 @@
     "build:icon": "node scripts/make-icon.js",
     "vscode:prepublish": "npm run build:icon && npm run build:webview && npm run package",
     "format": "prettier \"**/*.{js,json,md}\" --write",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+
+    "release:patch": "npx vsce publish patch && git tag v$(node -p \"require('./package.json').version\") -f && git push origin v$(node -p \"require('./package.json').version\") --force",
+    "release:minor": "npx vsce publish minor && git tag v$(node -p \"require('./package.json').version\") -f && git push origin v$(node -p \"require('./package.json').version\") --force",
+    "release:major": "npx vsce publish major && git tag v$(node -p \"require('./package.json').version\") -f && git push origin v$(node -p \"require('./package.json').version\") --force",
+    "release": "npm run release:patch"
   },
   "devDependencies": {
     "@types/node": "22.x",
