--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,13 +76,25 @@ jobs:
       # 8) VS Code Marketplace 게시
       #    - 리포지토리 시크릿 VSCE_PAT가 필요합니다.
       #    - 생성된 첫 번째 *.vsix 파일을 사용하여 게시합니다.
+      #    - 동일 버전이 이미 존재하면 건너뛰고 성공 처리합니다.
       - name: Publish to VS Code Marketplace
         env:
           VSCE_PAT: ${{ secrets.VSCE_PAT }}
         run: |
           FILE=$(ls *.vsix | head -n1)
           echo "Publishing $FILE"
-          npx vsce publish --packagePath "$FILE"
+          OUTPUT=$(npx vsce publish --packagePath "$FILE" 2>&1) || EXIT_CODE=$?
+          echo "$OUTPUT"
+          
+          if [ -z "$EXIT_CODE" ]; then
+            echo "✅ Published successfully"
+          elif echo "$OUTPUT" | grep -q "already exists"; then
+            echo "⚠️ Version already exists in Marketplace, skipping publish"
+            exit 0
+          else
+            echo "❌ Publish failed with unexpected error"
+            exit $EXIT_CODE
+          fi
 
       # 9) 워크플로우 아티팩트로 VSIX 보관 (나중에 다운로드 가능)
       - name: Upload VSIX artifact
